Fix T80796: Frame all ignores geometry from instances

Make "Frame All" share functionality with "Frame Selected",
accounting for duplis when calculating the bounds.